@@ -1,3 +1,9 @@
+2007-07-16  Hector E. Gomez M. <hectoregm@gmail.com> 
+
+	* Monodoc.Editor.Gui/DocumentTagTable.cs: Some comments about tags.
+	* Monodoc.Editor.Gui/DocumentTab.cs: Minor changes, removed title
+	  member.
+
 2007-07-13  Hector E. Gomez M. <hectoregm@gmail.com> 
 
 	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Some code refactoring
